firebase signup and forget pass

--- a/DoAn2/app/src/main/AndroidManifest.xml
+++ b/DoAn2/app/src/main/AndroidManifest.xml
@@ -18,13 +18,7 @@
         <activity
             android:name=".MainMenu"
             android:exported="true"
-            android:parentActivityName=".MainActivity">
-            <!--<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
-        </activity>
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Forget"
             android:exported="true"
