--- a/DoAn2/app/src/main/AndroidManifest.xml
+++ b/DoAn2/app/src/main/AndroidManifest.xml
@@ -13,12 +13,15 @@
         android:theme="@style/Theme.DoAn"
         tools:targetApi="31">
         <activity
+            android:name=".Grammar.GrammarCau"
+            android:exported="false" />
+        <activity
             android:name=".Home.DetailActivity"
             android:exported="false" />
         <activity
             android:name=".MainMenu"
             android:exported="true"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".Forget"
             android:exported="true"
