--- a/DoAn2/app/src/main/AndroidManifest.xml
+++ b/DoAn2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DoAn"
         tools:targetApi="31">
         <activity
+            android:name=".GrammarWord.GrammarTu1_1"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.GrammarCau1_1"
+            android:exported="false" />
+        <activity
             android:name=".Test.TestVocabulary"
             android:exported="false" />
         <activity
