--- a/DoAn2/app/src/main/AndroidManifest.xml
+++ b/DoAn2/app/src/main/AndroidManifest.xml
@@ -13,10 +13,55 @@
         android:theme="@style/Theme.DoAn"
         tools:targetApi="31">
         <activity
+            android:name=".GrammarCau.Folder2.GrammarCau2_2"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder2.GrammarCau2_1"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.GrammarCau2"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_12"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_11"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_10"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_8"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_6"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_7"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_5"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_9"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_4"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.GrammarCau1_3"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder1.grammar_cau1_2"
+            android:exported="false" />
+        <activity
+            android:name=".grammar_cau12"
+            android:exported="false" />
+        <activity
             android:name=".GrammarWord.GrammarTu1_1"
             android:exported="false" />
         <activity
-            android:name=".GrammarCau.GrammarCau1_1"
+            android:name=".GrammarCau.Folder1.GrammarCau1_1"
             android:exported="false" />
         <activity
             android:name=".Test.TestVocabulary"
