--- a/DoAn2/app/src/main/AndroidManifest.xml
+++ b/DoAn2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.DoAn"
         tools:targetApi="31">
         <activity
+            android:name=".GrammarCau.Folder7.GrammarCau7_2"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.Folder7.GrammarCau7_1"
+            android:exported="false" />
+        <activity
+            android:name=".GrammarCau.GrammarCau7"
+            android:exported="false" />
+        <activity
             android:name=".GrammarCau.Folder6.GrammarCau6_6"
             android:exported="false" />
         <activity
