--- a/PJ/Project/app/src/main/AndroidManifest.xml
+++ b/PJ/Project/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoAn"
         tools:targetApi="31">
+        <activity
+            android:name=".SearchDictionary"
+            android:exported="false" />
         <activity
             android:name=".GrammarWord.GrammarTu10"
             android:exported="false" />
