--- a/PJ/Project/app/src/main/AndroidManifest.xml
+++ b/PJ/Project/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.DoAn"
         tools:targetApi="31">
         <activity
+            android:name=".ViewResult.ViewResult"
+            android:exported="false" />
+        <activity
             android:name=".Test.TestVocabStart"
             android:exported="false" />
         <activity
